syntax = "proto3";

package architrace.controlplane.v1;

option java_multiple_files = true;
option java_package = "io.github.architrace.grpc.proto";
option java_outer_classname = "ControlPlaneProto";

service ControlPlaneService {
  rpc Connect(stream AgentEvent) returns (stream ControlPlaneEvent);
  rpc GetAgentHealth(AgentHealthRequest) returns (AgentHealthResponse);
}

message AgentEvent {
  oneof payload {
    AgentRegister register = 1;
    AgentPong pong = 2;
  }
}

message AgentRegister {
  string agent_name = 1;
}

message AgentPong {
  string agent_name = 1;
  int64 ping_id = 2;
  int64 sent_at_epoch_ms = 3;
}

message ControlPlaneEvent {
  oneof payload {
    ControlPlanePing ping = 1;
    ConfigUpdate config_update = 2;
  }
}

message ControlPlanePing {
  int64 ping_id = 1;
  int64 sent_at_epoch_ms = 2;
}

message ConfigUpdate {
  string version = 1;
  map<string, string> entries = 2;
}

message AgentHealthRequest {
  string agent_name = 1;
}

message AgentHealthResponse {
  bool live = 1;
  int64 last_seen_epoch_ms = 2;
}
