/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 Dmitry Hryshchenko
 * SPDX-License-Identifier: Apache-2.0
 */
package io.github.architrace.grpc;

import static org.assertj.core.api.Assertions.assertThat;

import io.github.architrace.controlplane.ControlPlaneRegistry;
import io.github.architrace.grpc.proto.AgentEvent;
import io.github.architrace.grpc.proto.AgentHealthRequest;
import io.github.architrace.grpc.proto.AgentHealthResponse;
import io.github.architrace.grpc.proto.AgentPong;
import io.github.architrace.grpc.proto.AgentRegister;
import io.github.architrace.grpc.proto.ControlPlaneEvent;
import io.grpc.stub.StreamObserver;
import java.util.ArrayList;
import java.util.List;
import org.junit.jupiter.api.AfterEach;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;

class ControlPlaneServiceImplTest {

  private static final String AGENT_A = "agent-a";
  private static final String AGENT_B = "agent-b";
  private static final String UNKNOWN_AGENT = "agent-x";
  private static final long HEALTH_LIVE_THRESHOLD_MS = 15_000L;
  private static final long PING_ID = 42L;
  private static final long PING_SENT_AT_EPOCH_MS = 100L;

  private ControlPlaneRegistry registry;
  private ControlPlaneServiceImpl sut;

  @BeforeEach
  void setUp() {
    registry = new ControlPlaneRegistry();
    sut = new ControlPlaneServiceImpl(registry);
  }

  @AfterEach
  void tearDown() {
    sut.close();
  }

  @Test
  void connectShouldRegisterHandlePongAndComplete() {
    RecordingObserver<ControlPlaneEvent> responseObserver = new RecordingObserver<>();
    StreamObserver<AgentEvent> requestObserver = sut.connect(responseObserver);

      requestObserver.onNext(
          AgentEvent.newBuilder()
              .setRegister(AgentRegister.newBuilder().setAgentName(AGENT_A).build())
              .build());

      assertThat(responseObserver.values.stream().anyMatch(ControlPlaneEvent::hasConfigUpdate)).isTrue();

      requestObserver.onNext(
          AgentEvent.newBuilder()
              .setPong(
                  AgentPong.newBuilder()
                      .setAgentName(AGENT_A)
                      .setPingId(PING_ID)
                      .setSentAtEpochMs(PING_SENT_AT_EPOCH_MS)
                      .build())
              .build());

      ControlPlaneRegistry.HealthState health = registry.health(AGENT_A, HEALTH_LIVE_THRESHOLD_MS);
      assertThat(health.live()).isTrue();
      assertThat(health.lastSeenEpochMs()).isGreaterThanOrEqualTo(PING_SENT_AT_EPOCH_MS);

      requestObserver.onCompleted();
      assertThat(responseObserver.completed).isTrue();
    assertThat(registry.health(AGENT_A, HEALTH_LIVE_THRESHOLD_MS).live()).isFalse();
  }

  @Test
  void connectShouldUnregisterOnError() {
    RecordingObserver<ControlPlaneEvent> responseObserver = new RecordingObserver<>();
    StreamObserver<AgentEvent> requestObserver = sut.connect(responseObserver);

      requestObserver.onNext(
          AgentEvent.newBuilder()
              .setRegister(AgentRegister.newBuilder().setAgentName(AGENT_B).build())
              .build());
      requestObserver.onError(new RuntimeException("boom"));

    assertThat(registry.health(AGENT_B, HEALTH_LIVE_THRESHOLD_MS).live()).isFalse();
  }

  @Test
  void connectShouldIgnoreEventsWithoutRegisterOrPong() {
    RecordingObserver<ControlPlaneEvent> responseObserver = new RecordingObserver<>();
    StreamObserver<AgentEvent> requestObserver = sut.connect(responseObserver);

    requestObserver.onNext(AgentEvent.getDefaultInstance());

    assertThat(registry.health(UNKNOWN_AGENT, HEALTH_LIVE_THRESHOLD_MS).live()).isFalse();
  }

  @Test
  void getAgentHealthShouldReturnRegistryHealth() {
    RecordingObserver<ControlPlaneEvent> connectObserver = new RecordingObserver<>();
    sut.connect(connectObserver).onNext(
          AgentEvent.newBuilder()
              .setRegister(AgentRegister.newBuilder().setAgentName(AGENT_A).build())
              .build());
    RecordingObserver<AgentHealthResponse> responseObserver = new RecordingObserver<>();
    AgentHealthRequest request = AgentHealthRequest.newBuilder().setAgentName(AGENT_A).build();

    sut.getAgentHealth(request, responseObserver);

    assertThat(responseObserver.values).hasSize(1);
    AgentHealthResponse response = responseObserver.values.get(0);
    assertThat(response.getLive()).isTrue();
    assertThat(response.getLastSeenEpochMs()).isPositive();
    assertThat(responseObserver.completed).isTrue();
  }

  private static final class RecordingObserver<T> implements StreamObserver<T> {
    private final List<T> values = new ArrayList<>();
    private Throwable error;
    private boolean completed;

    @Override
    public void onNext(T value) {
      values.add(value);
    }

    @Override
    public void onError(Throwable throwable) {
      this.error = throwable;
    }

    @Override
    public void onCompleted() {
      this.completed = true;
    }
  }
}
